# Prototipo-aprendizaje-federado-Practicas-curriculares-ISOIN

./: README.md  app.py  client.py  metrics.json  pyproject.toml  run_config.json  server.py  task_logistica.py  task_mnist.py  task_noIID_mnist.py
checkpoint/task_regresion_logistica/: checkpoint_round_1.npz  checkpoint_round_10.npz  checkpoint_round_2.npz  checkpoint_round_3.npz  checkpoint_round_4.npz  checkpoint_round_5.npz  checkpoint_round_6.npz  checkpoint_round_7.npz  checkpoint_round_8.npz  checkpoint_round_9.npz
distribuidores/: distribuidor_1.csv  distribuidor_2.csv  distribuidor_3.csv  distribuidor_4.csv
task/: task_mnist.py  task_noIID_mnist.py  task_regresion.py  task_regresion_logistica.py
