[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proyecto-federado"
version = "1.0.0"
dependencies = [
    "flwr>=1.9.0",
    "torch",
    "torchvision"
]

[tool.flwr.superlink.fleet-api]
address = "0.0.0.0:9092"

[tool.flwr.app]
publisher = "juan_vazquez, laura_gavira"

[tool.flwr.app.components]
serverapp = "server:app"
clientapp = "client:app"